--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>todo-list</title><script defer="defer" src="/js/chunk-vendors.ad584297.js"></script><script defer="defer" src="/js/app.a2f6cddb.js"></script><link href="/css/app.8075908e.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but todo-list doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <!-- <link rel="icon" href="./favicon.ico" /> -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <title>todo-list</title>
+    <script defer="defer" src="/js/chunk-vendors.ad584297.js"></script>
+    <script defer="defer" src="/js/app.a2f6cddb.js"></script>
+    <link href="/css/app.8075908e.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but todo-list doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="app"></div>
+  </body>
+</html>
